# rdma-based-rpc

./: .gitignore  Readme.md  concurrentqueue.cpp  concurrentqueue.h  kv_app.c  kv_app.h  kv_memory.c  kv_memory.h  kv_msg.h  kv_rdma.c  kv_rdma.h  kv_rdma_client.c  kv_rdma_server.c  meson.build  meson_options.txt  readme.md
app/: client.cc  common.h  meson.build  server.cc
app/proto/: hello.proto  meson.build
bench/: client.cc  meson.build  server.cc
bench/proto/: bench.proto  meson.build
include/: client.h  common.h  error.h  server.h
include/rdma/: client.h  client.hh  common.h  common.hh  connection.hh  context.hh  meson.build  server.h  server.hh  status.hh
include/rdma_rpc/: client.hh  connection.hh  context.hh  meson.build  message.hh  server.hh
include/rdma_rpc/util/: measure.hh  misc.hh  util.hh
include/util/: error.h  meson.build  misc.hh  ring.h  ring.hh  thread_pool.h  thread_pool.hh  util.h  util.hh
scripts/: dpdk_build_with_rpath_fix.patch  setup.sh
src/: client.cc  common.cc  connection.cc  context.cc  meson.build  server.cc
src/rdma/: client.cc  common.cc  connection.cc  context.cc  meson.build  server.cc
src/util/: meson.build  util.cc
subprojects/: protobuf.wrap
