option(
    'mode',
    type: 'string',
    value: 'poll',
    description: 'option for event handle mode',
)
option(
    'use_hugepage',
    type: 'feature',
    value: 'disabled',
    description: 'option for using hugepage',
)
option(
    'as_subproject',
    type: 'boolean',
    value: false,
    description: 'options for build as subproject',
)
