project_header_files += files(
    'util/measure.hh',
    'util/misc.hh',
    'util/ring.hh',
    'util/thread_pool.hh',
    'util/util.hh',
    'client.hh',
    'connection.hh',
    'context.hh',
    'message.hh',
    'server.hh',
    'status.hh',
)

install_headers(
    'client.hh',
    'connection.hh',
    'context.hh',
    'message.hh',
    'server.hh',
    'status.hh',
    subdir: 'rdma_rpc',
)
install_headers(
    'util/measure.hh',
    'util/misc.hh',
    'util/ring.hh',
    'util/thread_pool.hh',
    'util/util.hh',
    subdir: 'rdma_rpc/util',
)
